--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "both": "concurrently \"npm run dev\" \"nodemon ./backend/index.js\""
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "concurrently": "^8.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
